# localwhisper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
docs/superpowers/plans/: 2026-07-22-localwhisper-dictation.md
docs/superpowers/specs/: 2026-07-22-localwhisper-dictation-design.md
localwhisper/: app.py  audio.py  config.py  endpointing.py  engine.py  inject.py  overlay.py  paths.py  recording.py  tray.py  triggers.py  wakeword.py
packaging/: build_exe.py  make_release.py
packaging/installer/: Install.bat  Uninstall.bat
tests/: test_config.py  test_endpointing.py  test_engine.py  test_inject.py  test_recording.py
