[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "localwhisper"
version = "0.1.1"
description = "Local, offline push-to-talk and wake-word voice-to-text for Windows — types speech at your cursor."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bhargava" }]
keywords = ["whisper", "speech-to-text", "dictation", "voice", "wake-word", "windows"]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "keyboard>=0.13.5",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.16",
    "pyperclip>=1.8.2",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.scripts]
localwhisper = "run:main"

[project.urls]
Homepage = "https://github.com/Bhargava-R-dev/localwhisper"
Issues = "https://github.com/Bhargava-R-dev/localwhisper/issues"

[tool.setuptools]
packages = ["localwhisper"]
py-modules = ["run"]
